Add AddApplicationCommand and refactor codebase